# mediaplayer

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  script.ps1
client/: Cargo.toml  client.pyw  loader.c  mediaplayer.cp312-win_amd64.pyd  setup.py
client/src/: lib.rs  media.rs  state.rs  stream.rs
frontend/: bun.lockb  package.json  vite.config.ts
frontend/src/: App.tsx  index.scss  index.tsx  palette.scss  stream.ts  vite-env.d.ts
frontend/src/components/: groups.module.scss  groups.tsx  home.module.scss  home.tsx  library.module.scss  library.tsx  logs.module.scss  logs.tsx  navbar.module.scss  navbar.tsx
src/: main.rs  reader.rs
src/model/: mod.rs  state.rs  stream.rs
src/routes/: assets.rs  client.rs  group.rs  media.rs  mod.rs  stream.rs
