[package]
name = "mediaplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.5.1", features = ["rustls-0_21"]}
actix-web-lab = "0.20.2"
rustls = "0.21.10"
rustls-pemfile = "2.0.0"
dotenv = "0.15.0"
futures = "0.3.30"
lofty = "0.18.2"
log = "0.4.21"
pin-project-lite = "0.2.13"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
