[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
futures-util = "0.3.30"
reqwest = { version = "0.12.0", features = ["stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
whoami = "1.5.1"
