[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytes = "1.5.0"
futures-util = "0.3.30"
reqwest = { version = "0.12.0", features = ["stream"] }
rodio = "0.17.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
whoami = "1.5.1"
winapi = { version = "0.3.9", features = ["endpointvolume", "winerror", "combaseapi", "mmdeviceapi", "objbase", "cguid"] }

[lib]
crate-type = ["cdylib"]
